--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,8 @@
 :root {
-    --primary-color: #fce138;
-    --secondary-color: #024e76;
-    --tertiary-color: #39a6b2;
+    --light: #c3cbcc;
+    --dark-blue: #24165a;
+    --light-blue: #8dd6df;
+    --dark: #8dd6df;
   }
   
   * {
@@ -11,7 +12,7 @@
   }
   
   body {
-    color: var(--tertiary-color);
+    color: var(--dark-blue);
     font-family: Helvetica, Arial, sans-serif;
   }
   
