--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,79 +1,83 @@
 :root {
-    --light: #c3cbcc;
-    --dark-blue: #303b5a;
-    --light-blue: #b9d5da;
-    --dark: #2c2c41;
+  --light: #e2ebec;
+  --light-blue: #a6c2c7;
+  --dark: #2c2c41;
 }
   
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
   
 body {
-    color: var(--dark-blue);
-    font-family: Helvetica, Arial, sans-serif;
+  color: var(--dark);
+  background-color: var(--light) ;
+  font-family: Helvetica, Arial, sans-serif;
 }
-  
+
+/* STYLE ALL SECTION TAGS START*/
+section {
+  padding: 150px 0 0 0;
+}
+/* STYLE ALL SECTION TAGS END*/
  
 /* HEADER / NAV BAR STYLES START */
 header {
-    padding: 5px 0;
-    background-color: var(--dark);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 80%;
-    z-index: 9999;
+  padding: 5px 0;
+  background-color: var(--dark);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 80%;
+  z-index: 9999;
 }
   
 header h1 {
-    font-weight: bold;
-    font-size: 30px;
-    color: var(--dark);
-    background-color: var(--light-blue);
-    width:250px;
-    text-align: right;
+  font-weight: bold;
+  font-size: 30px;
+  color: var(--dark);
+  background-color: var(--light-blue);
+  width:250px;
+  text-align: right;
 }
 
 header h1 a {
-    text-decoration: none;
-    color: var(--dark);
-    margin: 5px 10px 5px 5px;
-    padding: 5px;
+text-decoration: none;
+  color: var(--dark);
+  margin: 5px 10px 5px 5px;
+  padding: 5px;
  }  
 
 header nav {
-    text-decoration: none;
-    margin: 5px 40px 5px 5px;
+  text-decoration: none;
+  margin: 5px 40px 5px 5px;
 }
   
 header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: flex-end;
-    list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: flex-end;
+  list-style: none;
 }
   
 header nav ul li a {
-    color: var(--light-blue);
-    padding: 5px 5px;
-    font-weight: lighter;
-    font-size: 1.2vw;
+  color: var(--light-blue);
+  padding: 5px 5px;
+  font-weight: lighter;
+  font-size: 1.2vw;
 }
   
 header nav ul li a:hover {
-    color: var(--light-blue);
+  color: var(--light-blue);
 }
 /* HEADER / NAVBAR STYLES END */
-  
   
 /* HERO STYLES START */
 .hero {
@@ -97,12 +101,29 @@ header nav ul li a:hover {
 }
 /* HERO STYLES END */
   
+/* CATEGORIES START */
+.section-title {
+  font-size: 40px;
+  padding-right: 20px;
+  text-align: left;
+  margin: auto 0 auto 35px;
+  width: 25%;
+  text-align: right;
+}
 
+.flex-row {
+  display: flex;
+}
+
+.category p {
+  border-left: 3px solid;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  padding: 0 0 0 20px;
+}
+/* CATEGORIES END */
   
-  /* STYLE ALL SECTION TAGS */
-  section {
-    padding: 150px 0 0 0;
-  }
+  
   
 
 
