--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ header nav ul li a:hover {
   background-size: cover;
 }
 .grid-item:nth-child(4) {
-  background-image: url(../images/im4.jpg);
+  background-image: url(../images/im4.JPG);
   background-size: cover;
 }
 .grid-item:nth-child(5) {
