--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ header nav ul li a:hover {
   background-size: cover;
 }
 .grid-item:nth-child(3) {
-  background-image: url(../images/im3.jpg);
+  background-image: url(../images/im3.JPG);
   background-size: cover;
 }
 .grid-item:nth-child(4) {
